--- a/cooccurence.ipynb
+++ b/cooccurence.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -48,147 +48,16 @@
      "text": [
       "['In recent years the field of data science has rapidly evolved driven by advancements in artificial intelligence AI and machine learning As industries increasingly rely on datadriven insights to make strategic decisions the demand for skilled professionals in this domain has surged Educational institutions are adapting their curricula to equip students with the knowledge and skills needed for these roles focusing on statistical analysis programming and AI technologies The job market is witnessing a growing number of opportunities in data science as companies across various sectors seek experts to harness big data and AI for competitive advantage This trend highlights the importance of staying current with technological advancements and continuously updating ones skill set to thrive in this dynamic field', '', '']\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[['<START>',\n",
-       "  'in',\n",
-       "  'recent',\n",
-       "  'years',\n",
-       "  'the',\n",
-       "  'field',\n",
-       "  'of',\n",
-       "  'data',\n",
-       "  'science',\n",
-       "  'has',\n",
-       "  'rapidly',\n",
-       "  'evolved',\n",
-       "  'driven',\n",
-       "  'by',\n",
-       "  'advancements',\n",
-       "  'in',\n",
-       "  'artificial',\n",
-       "  'intelligence',\n",
-       "  'ai',\n",
-       "  'and',\n",
-       "  'machine',\n",
-       "  'learning',\n",
-       "  'as',\n",
-       "  'industries',\n",
-       "  'increasingly',\n",
-       "  'rely',\n",
-       "  'on',\n",
-       "  'datadriven',\n",
-       "  'insights',\n",
-       "  'to',\n",
-       "  'make',\n",
-       "  'strategic',\n",
-       "  'decisions',\n",
-       "  'the',\n",
-       "  'demand',\n",
-       "  'for',\n",
-       "  'skilled',\n",
-       "  'professionals',\n",
-       "  'in',\n",
-       "  'this',\n",
-       "  'domain',\n",
-       "  'has',\n",
-       "  'surged',\n",
-       "  'educational',\n",
-       "  'institutions',\n",
-       "  'are',\n",
-       "  'adapting',\n",
-       "  'their',\n",
-       "  'curricula',\n",
-       "  'to',\n",
-       "  'equip',\n",
-       "  'students',\n",
-       "  'with',\n",
-       "  'the',\n",
-       "  'knowledge',\n",
-       "  'and',\n",
-       "  'skills',\n",
-       "  'needed',\n",
-       "  'for',\n",
-       "  'these',\n",
-       "  'roles',\n",
-       "  'focusing',\n",
-       "  'on',\n",
-       "  'statistical',\n",
-       "  'analysis',\n",
-       "  'programming',\n",
-       "  'and',\n",
-       "  'ai',\n",
-       "  'technologies',\n",
-       "  'the',\n",
-       "  'job',\n",
-       "  'market',\n",
-       "  'is',\n",
-       "  'witnessing',\n",
-       "  'a',\n",
-       "  'growing',\n",
-       "  'number',\n",
-       "  'of',\n",
-       "  'opportunities',\n",
-       "  'in',\n",
-       "  'data',\n",
-       "  'science',\n",
-       "  'as',\n",
-       "  'companies',\n",
-       "  'across',\n",
-       "  'various',\n",
-       "  'sectors',\n",
-       "  'seek',\n",
-       "  'experts',\n",
-       "  'to',\n",
-       "  'harness',\n",
-       "  'big',\n",
-       "  'data',\n",
-       "  'and',\n",
-       "  'ai',\n",
-       "  'for',\n",
-       "  'competitive',\n",
-       "  'advantage',\n",
-       "  'this',\n",
-       "  'trend',\n",
-       "  'highlights',\n",
-       "  'the',\n",
-       "  'importance',\n",
-       "  'of',\n",
-       "  'staying',\n",
-       "  'current',\n",
-       "  'with',\n",
-       "  'technological',\n",
-       "  'advancements',\n",
-       "  'and',\n",
-       "  'continuously',\n",
-       "  'updating',\n",
-       "  'ones',\n",
-       "  'skill',\n",
-       "  'set',\n",
-       "  'to',\n",
-       "  'thrive',\n",
-       "  'in',\n",
-       "  'this',\n",
-       "  'dynamic',\n",
-       "  'field',\n",
-       "  '<END>']]"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "text = read_corpus()\n",
-    "text"
+    "# text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,116 +83,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['<END>',\n",
-       " '<START>',\n",
-       " 'a',\n",
-       " 'across',\n",
-       " 'adapting',\n",
-       " 'advancements',\n",
-       " 'advantage',\n",
-       " 'ai',\n",
-       " 'analysis',\n",
-       " 'and',\n",
-       " 'are',\n",
-       " 'artificial',\n",
-       " 'as',\n",
-       " 'big',\n",
-       " 'by',\n",
-       " 'companies',\n",
-       " 'competitive',\n",
-       " 'continuously',\n",
-       " 'current',\n",
-       " 'curricula',\n",
-       " 'data',\n",
-       " 'datadriven',\n",
-       " 'decisions',\n",
-       " 'demand',\n",
-       " 'domain',\n",
-       " 'driven',\n",
-       " 'dynamic',\n",
-       " 'educational',\n",
-       " 'equip',\n",
-       " 'evolved',\n",
-       " 'experts',\n",
-       " 'field',\n",
-       " 'focusing',\n",
-       " 'for',\n",
-       " 'growing',\n",
-       " 'harness',\n",
-       " 'has',\n",
-       " 'highlights',\n",
-       " 'importance',\n",
-       " 'in',\n",
-       " 'increasingly',\n",
-       " 'industries',\n",
-       " 'insights',\n",
-       " 'institutions',\n",
-       " 'intelligence',\n",
-       " 'is',\n",
-       " 'job',\n",
-       " 'knowledge',\n",
-       " 'learning',\n",
-       " 'machine',\n",
-       " 'make',\n",
-       " 'market',\n",
-       " 'needed',\n",
-       " 'number',\n",
-       " 'of',\n",
-       " 'on',\n",
-       " 'ones',\n",
-       " 'opportunities',\n",
-       " 'professionals',\n",
-       " 'programming',\n",
-       " 'rapidly',\n",
-       " 'recent',\n",
-       " 'rely',\n",
-       " 'roles',\n",
-       " 'science',\n",
-       " 'sectors',\n",
-       " 'seek',\n",
-       " 'set',\n",
-       " 'skill',\n",
-       " 'skilled',\n",
-       " 'skills',\n",
-       " 'statistical',\n",
-       " 'staying',\n",
-       " 'strategic',\n",
-       " 'students',\n",
-       " 'surged',\n",
-       " 'technological',\n",
-       " 'technologies',\n",
-       " 'the',\n",
-       " 'their',\n",
-       " 'these',\n",
-       " 'this',\n",
-       " 'thrive',\n",
-       " 'to',\n",
-       " 'trend',\n",
-       " 'updating',\n",
-       " 'various',\n",
-       " 'with',\n",
-       " 'witnessing',\n",
-       " 'years']"
+       "90"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vocab"
+    "vocab_size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,33 +135,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0., 0., 0., ..., 0., 0., 0.],\n",
-       "       [0., 0., 0., ..., 0., 0., 1.],\n",
-       "       [0., 0., 0., ..., 0., 1., 0.],\n",
-       "       ...,\n",
-       "       [0., 0., 0., ..., 0., 0., 0.],\n",
-       "       [0., 0., 1., ..., 0., 0., 0.],\n",
-       "       [0., 1., 0., ..., 0., 0., 0.]])"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "co_occurence_matrix"
+    "# co_occurence_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -409,115 +172,16 @@
       "Running Truncated SVD over 90 words...\n",
       "Done.\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.6835969 , -0.64518158],\n",
-       "       [ 0.7677994 , -0.44884371],\n",
-       "       [ 0.6319682 , -0.59451665],\n",
-       "       [ 0.73742315, -0.5349823 ],\n",
-       "       [ 0.50216261, -0.17142614],\n",
-       "       [ 1.81906458,  0.16157348],\n",
-       "       [ 1.55562187,  0.51207646],\n",
-       "       [ 3.54468428,  1.66938213],\n",
-       "       [ 0.96982616,  1.34345127],\n",
-       "       [ 5.01700616,  2.88956974],\n",
-       "       [ 0.54961967, -0.42069955],\n",
-       "       [ 1.22344756,  0.21033085],\n",
-       "       [ 1.84254045,  0.20382738],\n",
-       "       [ 1.38980464,  0.55882511],\n",
-       "       [ 0.87233548, -0.79090156],\n",
-       "       [ 0.95809275, -0.74974246],\n",
-       "       [ 1.45985916,  0.34563143],\n",
-       "       [ 0.93314153,  0.59257228],\n",
-       "       [ 1.33386377,  0.17547577],\n",
-       "       [ 0.63274622,  0.1382304 ],\n",
-       "       [ 3.45061644, -1.59310645],\n",
-       "       [ 0.61266225,  0.72276899],\n",
-       "       [ 1.09805059,  0.33721002],\n",
-       "       [ 1.20991992, -0.07175471],\n",
-       "       [ 0.88546831, -0.94982495],\n",
-       "       [ 0.93543323, -1.05133632],\n",
-       "       [ 0.95323751, -0.63878505],\n",
-       "       [ 0.5485184 , -0.68845569],\n",
-       "       [ 0.96214584,  0.33442253],\n",
-       "       [ 1.07153347, -1.23029568],\n",
-       "       [ 0.79007919, -0.10471598],\n",
-       "       [ 2.1136279 , -1.921258  ],\n",
-       "       [ 0.71142979,  1.16344769],\n",
-       "       [ 3.38374084,  1.21747824],\n",
-       "       [ 0.82947516, -0.86745427],\n",
-       "       [ 1.22369115,  0.43242964],\n",
-       "       [ 1.73874177, -2.17759642],\n",
-       "       [ 1.15164254, -0.33276758],\n",
-       "       [ 1.18530398, -0.31294083],\n",
-       "       [ 4.40115634, -2.26893032],\n",
-       "       [ 0.51945779,  0.77274334],\n",
-       "       [ 0.78744328,  0.99422973],\n",
-       "       [ 0.63164318,  0.65757139],\n",
-       "       [ 0.40172595, -0.57277032],\n",
-       "       [ 1.22427456,  0.40836227],\n",
-       "       [ 0.75677209, -0.15975285],\n",
-       "       [ 1.16911673,  0.48155961],\n",
-       "       [ 1.32400567,  0.89940969],\n",
-       "       [ 0.94896654,  0.94429826],\n",
-       "       [ 0.98331444,  0.89153038],\n",
-       "       [ 0.94004754,  0.50848771],\n",
-       "       [ 0.91322057,  0.10874137],\n",
-       "       [ 1.19911142,  1.07314851],\n",
-       "       [ 0.98453309, -1.03633265],\n",
-       "       [ 3.05168154, -2.28014428],\n",
-       "       [ 1.51310082,  1.85815243],\n",
-       "       [ 1.00079722,  0.4803998 ],\n",
-       "       [ 1.13567975, -1.17355571],\n",
-       "       [ 1.36676466, -0.61213447],\n",
-       "       [ 1.23275659,  1.23825779],\n",
-       "       [ 0.98906831, -1.23140827],\n",
-       "       [ 1.0834467 , -0.86575851],\n",
-       "       [ 0.66137222,  0.74209219],\n",
-       "       [ 0.71505378,  1.14429241],\n",
-       "       [ 2.25681746, -2.21613242],\n",
-       "       [ 0.66542963, -0.05625408],\n",
-       "       [ 0.63776337, -0.02102689],\n",
-       "       [ 1.03746084, -0.14949209],\n",
-       "       [ 1.15858647,  0.23921509],\n",
-       "       [ 1.32761261, -0.36258446],\n",
-       "       [ 1.29206013,  1.04522318],\n",
-       "       [ 0.95457293,  1.38853883],\n",
-       "       [ 1.09765496, -0.14428432],\n",
-       "       [ 1.05436063,  0.4449122 ],\n",
-       "       [ 1.23804377,  0.63817229],\n",
-       "       [ 0.78509084, -0.91185928],\n",
-       "       [ 1.07285863,  0.31282883],\n",
-       "       [ 1.21197986,  0.84335378],\n",
-       "       [ 5.01769478,  0.08421804],\n",
-       "       [ 0.52984215, -0.01761296],\n",
-       "       [ 0.96237322,  1.29771738],\n",
-       "       [ 3.03488439, -1.02757315],\n",
-       "       [ 1.10681976, -0.51818757],\n",
-       "       [ 3.30562793,  0.58264805],\n",
-       "       [ 1.29134314, -0.19763666],\n",
-       "       [ 0.99872189,  0.56286347],\n",
-       "       [ 0.72856303, -0.3190771 ],\n",
-       "       [ 2.23245917,  0.8820344 ],\n",
-       "       [ 0.86919456, -0.46970471],\n",
-       "       [ 1.29431069, -1.02384623]])"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "matrix_reduced = reduce(co_occurence_matrix)\n",
-    "matrix_reduced"
+    "# matrix_reduced"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
